--- a/microservices/club-service/build.gradle
+++ b/microservices/club-service/build.gradle
@@ -53,6 +53,7 @@ dependencies {
 
     // --- Database driver ---
     runtimeOnly 'org.postgresql:postgresql'
+    runtimeOnly 'com.h2database:h2'
 
     // --- Lombok for boilerplate code reduction ---
     compileOnly 'org.projectlombok:lombok'
@@ -61,6 +62,10 @@ dependencies {
     // --- Testing dependencies ---
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+    testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+    testImplementation 'org.testcontainers:rabbitmq'
+    testImplementation 'org.testcontainers:postgresql'
 
     // --- Tracing and observability ---
     implementation 'io.micrometer:micrometer-tracing-bridge-brave'
