--- a/microservices/auth-service/build.gradle
+++ b/microservices/auth-service/build.gradle
@@ -59,6 +59,12 @@ dependencies {
 
 	// --- Database driver ---
 	runtimeOnly 'org.postgresql:postgresql'
+	runtimeOnly 'com.h2database:h2'
+	testImplementation 'org.testcontainers:junit-jupiter'
+	testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+	testImplementation 'org.testcontainers:rabbitmq'
+	testImplementation 'org.testcontainers:kafka'
+	testImplementation 'org.testcontainers:postgresql'
 
 	// --- Lombok for boilerplate code reduction ---
 	compileOnly 'org.projectlombok:lombok'
@@ -73,9 +79,9 @@ dependencies {
 	implementation 'io.micrometer:micrometer-tracing-bridge-brave'
 	runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
 	implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
-	runtimeOnly  'io.micrometer:micrometer-tracing-reporters-zipkin'
 	implementation 'io.github.resilience4j:resilience4j-spring-boot3'
 	implementation 'io.github.resilience4j:resilience4j-micrometer'
+	implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
 
 	// Circuit Breaker
 	implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j'
