--- a/microservices/enrollment-service/build.gradle
+++ b/microservices/enrollment-service/build.gradle
@@ -70,6 +70,17 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
+    // --- Tracing and observability ---
+    implementation 'io.micrometer:micrometer-tracing-bridge-brave'
+    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'
+    implementation 'net.logstash.logback:logstash-logback-encoder:7.4'
+    implementation 'io.github.resilience4j:resilience4j-spring-boot3'
+    implementation 'io.github.resilience4j:resilience4j-micrometer'
+    implementation 'io.zipkin.reporter2:zipkin-reporter-brave'
+
+    // Circuit Breaker
+    implementation 'org.springframework.cloud:spring-cloud-starter-circuitbreaker-reactor-resilience4j'
+
     // --- Other libraries ---
     implementation 'com.auth0:java-jwt:4.0.0'
 }
